@@ -23,8 +23,6 @@ implement in GXemul. Some items in this list are perhaps already fixed.
 <p><pre>
 <b>Current "short-list":</b>
 
-o) register-devices-as-symbols for more machines
-	o) Mention in release notes?
 o) Per-arch overrides for whether to print symbols when executing in userspace?
 	e.g. MIPS is OK since symbols are at kseg0.
 	e.g. M88K is not OK, since userland and supervisor are the same numeric values.
@@ -37,6 +35,8 @@ o) verbosity settings for debug messages for individual subsystems:
 	Modify and add a new command:
 		quiet [on|off] -> quiet [subsystem] [on|off]
 		verbosity [subsystem] [n]   (where n is a number? 0,1,2,3)
+	Command for launching a separate terminal for output from a specified subsystem?
+		(Or a flag to the verbosity command?)
 o) Reimplement after the C++ to C switch:
 	x. i960 CPU: Disassembly of at least i960CA instructions.
 	x. HP700/RX machine skeleton.
